# deejae-leetta-network

./: .env.example  .gitignore  ADMIN_TOOLS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  QUICKSTART.md  README.md  README_EXTENDED.md  REWARDS_SYSTEM.md  TEST_RESULTS.md  WORTH.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start.py  test_system.sh
agents/: arts_marketing_agent.py  base_agent.py  campaign_optimizer_agent.py  ecommerce_client_agent.py  ecommerce_client_finder.py  growth_hacker_agent.py  investor_relations_agent.py  mmo_customer_agent.py  trading_strategy_agent.py
api/: admin.py  audit_log.py  auth.py  dev_tools.py  growth.py  main.py  webhook_handler.py
config/: error_handlers.py  logging_config.py  settings.py
contracts/: AIAgentCoordinator.sol  D33JCoin.sol  D33JToken.sol
dashboard/: index.html
deejae/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  runner.py  state.py  tickblaze.py  webhooks.py
docs/: AI_AGENCY.md  ARCHITECTURE.md  FOREX_STRATEGIES.md  WEBHOOKS.md  deejae_exec_summary.md
examples/: config.example.json  eurusd_sample.csv  leads.csv
ml_models/: customer_profiling.py
scripts/: agent_orchestrator.py  deejae_agency.py  hash_password.py  run_agents.py  token_worth.py  trading_strategy.py
tests/: conftest.py  test_admin.py  test_agents.py  test_auth.py  test_base_agent.py  test_cli.py  test_deejae_agency_cli.py  test_dev_tools.py  test_forex_core.py  test_growth_agent.py  test_orchestrator.py  test_token_worth.py  test_trading_strategy.py  (+2 more)
(+24 files in other folders)
